<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit_cache"
        android:orderInCategory="100"
        android:title="@string/edit_cache"

        android:titleCondensed="@string/edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear_cache"
        android:orderInCategory="101"
        android:title="@string/action_clear_cache"
        android:icon="@drawable/ic_delete"
        android:titleCondensed="@string/action_clear"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share_cache"
        android:orderInCategory="102"
        android:title="@string/action_share_cache"
        android:icon="@drawable/ic_action_share_white_18dp"
        android:titleCondensed="@string/action_share"
        app:showAsAction="ifRoom" />

</menu>