<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_new_cache"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/create_cache" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_active_caches"
            android:icon="@drawable/ic_menu_black_24dp"
            android:title="@string/actives" />
        <item
            android:id="@+id/nav_archived_caches"
            android:icon="@drawable/ic_archive_black_24dp"
            android:title="@string/archive" />
    </group>

    <item android:title="@string/apps">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_error_outline_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
